--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "@imengyu/vue3-context-menu": "^1.0.9",
         "@vuepic/vue-datepicker": "^3.3.1",
         "autonumeric": "^4.6.0",
         "axios": "^0.27.2",
+        "click-outside-vue3": "^4.0.1",
         "core-js": "^3.8.3",
         "element-plus": "^2.2.9",
         "jw-vue-pagination": "^1.0.3",
+        "v-contextmenu": "^3.0.0",
         "v-money": "^0.8.1",
         "vue": "^3.2.13",
+        "vue-click-outside": "^1.1.0",
         "vue-router": "^4.0.16",
+        "vue3-click-away": "^1.2.4",
         "vuejs-paginate": "^2.1.0",
         "vuejs-paginate-next": "^1.0.2"
     },
@@ -44,7 +49,9 @@
         "rules": {
             "no-debugger": 0,
             "no-multiple-template-root": 0,
-            "Type aliases can only be used in TypeScript files": 0
+            "Type aliases can only be used in TypeScript files": 0,
+            "JSX expressions must have one parent element": 0,
+            "Type annotations can only be used in TypeScript files": 0
         }
     },
     "browserslist": [
