--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "vue-router": "^4.0.16",
         "vue3-click-away": "^1.2.4",
         "vuejs-paginate": "^2.1.0",
-        "vuejs-paginate-next": "^1.0.2"
+        "vuejs-paginate-next": "^1.0.2",
+        "vuex": "^4.0.2",
+        "vuex-persistedstate": "^4.1.0"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
